# -*- mode: org eval: (auto-fill-mode) -*-

* 0.3
** Alias command

   Display, define alias with the shell syntax.

** Configuration

*** The comments could not be inline, due to the password inclusion on this file.

*** Number

    The number in the global section can be pretty written with underscore.

** Find command

   Manage the option `-type'.

   -type c
   File is of type c:

   - d: directory
   - f: file
   - a: all

** List Columns command

   List the columns name of a csv.

** Cmp command

   Re-implement the 'cmp' command. Compare two files byte by byte.

** Ls command

   New implement. Optimize the recursive version. Make only two calls to the
   Amazon S3 or Google GCS API

** Ssh Configuration File

   Read =~/.ssh/config= for the host, username, and identity key configurations.

** Bug fixes